# turboquant-thor

./: .gitignore  LICENSE  README.md  RESEARCH.md  SPEC.md  pyproject.toml  run_demo.py  run_qwen32b_benchmark.py  run_qwen_turboquant.py
core/: __init__.py  codebook.py  metal_kernels.py  metal_kernels_v2.py  packing.py  quantizer.py  rotation.py  sparse_v.py
mlx_integration/: __init__.py  attention.py  cache.py  patch.py
tests/: test_cache.py  test_codebook.py  test_metal_kernels.py  test_metal_kernels_v2.py  test_packing.py  test_quantizer.py  test_rotation.py  test_sparse_v.py
