[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant-thor"
version = "0.1.0"
description = "TurboQuant KV cache compression for Apple Silicon — optimized for M4 Pro"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mlx>=0.22",
    "mlx-lm>=0.20",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "scipy>=1.10",
]

[tool.setuptools.packages.find]
include = ["core*", "mlx_integration*", "validation*", "benchmarks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
